Functionality complete through form submission in delivery app. Added refresh functionality to delivery page. Added sync scope to SSO token call (for compatibility with multiple server versions). Added usage for claim and delivery_progress API calls. Added more navigation in line with new progress.

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -668,6 +668,8 @@
     <string name="connect_delivery_ready_to_claim_detailed">To complete this claim and start delivering care, download the delivery app.</string>
     <string name="connect_delivery_expired_detailed">The last date for the project is over. You will be notified if the opportunity opens up again.</string>
     <string name="connect_delivery_claim">Claim Job</string>
+    <string name="connect_delivery_get_app">Download App</string>
+    <string name="connect_delivery_go">Go To App</string>
 
     <string name="connect_progress_delivery">Delivery</string>
     <string name="connect_progress_delivery_verification">Verification &amp; Payments</string>
