Small text change and a spacing improvement to some UI text. Disabled default wait dialog for ConnectActivity when downloading fragment is displayed. Disabled back button when downloading fragment is displayed. Only calling jobs complete when end date has past (allowing more than maxVisits).

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -657,7 +657,7 @@
     <string name="connect_learn_certificate">CERTIFICATE OF COMPLETION</string>
     <string name="connect_learn_completed">Completed on: %s</string>
     <string name="connect_learn_claim_label">Claim Job to Deliver Care</string>
-    <string name="connect_learn_view_details">View Delivery Details</string>
+    <string name="connect_learn_view_details">View Job Details</string>
     <string name="connect_learn_go_to_assessment">Go To Assessment</string>
     <string name="connect_learn_try_again">Try Again</string>
     <string name="connect_learn_start">Start Learning</string>
