--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -461,4 +461,6 @@
     <string name="fcm_default_notification_channel">notification-channel-push-notifications</string>
     <string name="app_with_id_not_found">Required CommCare App is not installed on device</string>
     <string name="audio_recording_notification">Audio Recording Notification</string>
+    <string name="micro_image_activity_title" cc:translatable="true">Capture Face Picture</string>
+    <string name="camera_start_failed" cc:translatable="true">Camera failed to start</string>
 </resources>
