--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -690,6 +690,7 @@ notification.sync.airplane.action=You are in airplane mode and unable to connect
 notification.case.filter.title=Case List failed to sort
 notification.case.filter.detail=Sort property not have the expected datatype
 notification.case.filter.action=Sorting failed because CommCare expected a number but got ${0}. Make sure you have selected the correct format for your sort property.
+notification.form.submission.success=Form successfully saved!
 
 notification.send.malformed.title=Bad Form on SD Card
 notification.send.malformed.detail=The file ${0} on your SD card was malformed and couldn't be read. It has been removed as a precaution.
