--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -705,6 +705,8 @@
     <string name="connect_progress_warning">Not seeing your expected progress?</string>
     <string name="connect_progress_warning_learn">Learn why</string>
     <string name="connect_progress_warning_ended">The job has ended. You will not earn any progress for additional work.</string>
+    <string name="connect_progress_warning_max_reached">You have completed the maximum number of visits. You will not earn any progress for additional work.</string>
+    <string name="connect_progress_warning_daily_max_reached">You have reached the maximum number of visits for today. You will not earn any progress for additional work.</string>
     <string name="connect_progress_warning_full">You may not see your expected progress if your number of visits exceeds the maximum for the day OR if your forms have not been uploaded. You can wait for your forms to sync with a better network and check progress again.</string>
 
     <string name="connect_downloading_learn">Downloading Learn App</string>
