Upgraded DB model for ConnectLinkedAppRecord (supporting offers to link to ConnectID). Now storing linked app records even when app is not linked to ConnectID (to remember we offered). Updates to how and when the stored app credentials are modified/deleted. Upgraded DB model for ConnectJobPaymentRecord to support payment confirmation.

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="ConnectLearnProgressURL">https://%s/api/opportunity/%d/learn_progress</string>
     <string name="ConnectClaimJobURL">https://%s/api/opportunity/%d/claim</string>
     <string name="ConnectDeliveriesURL">https://%s/api/opportunity/%d/delivery_progress</string>
+    <string name="ConnectPaymentConfirmationURL">https://%s/api/payment/%d/confirm</string>
 
     <string name="key_server">https://pact.dimagi.com/keys/getkey</string>
     <string name="your_comment">Your comment</string>
