--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -490,6 +490,8 @@
     <string name="login_welcome_connect_signed_out">Unlock ConnectID first and then enter your app.</string>
     <string name="login_welcome_connect_signed_in">Welcome %s!</string>
 
+    <string name="login_input_auto">AUTO</string>
+
     <string name="choice_or">_____________    OR    _____________</string>
     <string name="busy_message">We are still busy processing your previous request. Please try again in some time.</string>
 
